# oxidizer

./: Cargo.toml
assets/: hello.html  index.html
src/: http.rs  lib.rs  main.rs  request.rs  response.rs  router.rs  server.rs  usercontroller.rs  util.rs
src/router/: macros.rs
